# rust-spec-conformance

./: CONTRIBUTORS  Cargo.toml  LICENSE-BSD-PATENT  README.md
compilers/: rustc.toml
src/: compiler.rs  main.rs
suite/items/extern-crate/: self.rs
suite/items/static/: init-complex.rs  init-const-expr.rs  init-extern-omit-allowed.rs  init-extern-omit-required.rs  init-ref-static.rs  init-required.rs  init-use-static.rs  init-values.rs
suite/layout/: unit.rs
suite/layout/aggregate/: aggregate-fields.rs  struct-align.rs  struct-offsets.rs  struct-size.rs  union-align.rs  union-offsets.rs  union-size.rs
suite/layout/aggregate/enum/: variant-fields.rs
suite/layout/aggregate/transparent/: exclusive-repr.rs  layout-same.rs  multiple-fields.rs  multiple-variants.rs  repr-usage.rs  transparent-with-align.rs
suite/layout/array/: array-align.rs  array-offsets.rs  array-size.rs
suite/layout/scalar/: alignments.rs  pointer-unsized.rs  pointer.rs  sizes.rs  usize-isize.rs
suite/layout/slice/: slice-layout.rs  slice-offsets.rs
suite/lex/input/: invalid-utf8.rs  shebang-inner-attribute.rs  shebang-square-bracket-errorrs  shebang.rs  utf8-stress-test.rs
suite/meta/: compile-fail.rs  compile-only.rs  run-fail.rs  run-pass-should-panic.rs  run-pass.rs  skip-compiles.rs  skip-error.rs  skip-rt-error.rs  skip-runs.rs
