[package]
name = "rust-spec-conformance"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = { version = "2.7.1", features = ["serde"] }
jaq-interpret = "1.5.0"
jaq-parse = "1.0.3"
jobserver = "0.1.32"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tempdir = "0.3.7"
toml = "0.8.19"
walkdir = "2.5.0"
